--- a/index.html
+++ b/index.html
@@ -8,34 +8,30 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Web Developer | Designer | Creator</p>
+    <h1>Paul Moore</h1>
+    <p>MSc Student, University Of Western Ontario</p>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hello! I'm a web developer passionate about building clean and functional websites. I enjoy learning new technologies and creating things for the web.</p>
+    <p>Hi! I am currently studying for my masters degree in computer science at Western. My areas of interest are Deep Learning algorithms and their applications in Bioinformatics.</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Project One</h3>
-      <p>Short description of your project. You can link it or add screenshots later.</p>
-    </div>
-    <div class="project">
-      <h3>Project Two</h3>
-      <p>Another short description. Keep it simple to start.</p>
+      <h3>Generative Models for Protein-Protein Interaction Prediction</h3>
+      <p>A review paper intended to bring informed non-experts up to speed on the current developments in PPI prediction using deep learning.</p>
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email: <a href="mailto:pmoore44@uwo.ca"><pmoore44@uwo.ca/a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 Paul Moore</p>
   </footer>
 </body>
 </html>
