--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:pmoore44@uwo.ca"><pmoore44@uwo.ca/a></p>
+    <p>Email: <a href="mailto:pmoore44@uwo.ca">pmoore44@uwo.ca</a></p>
   </section>
 
   <footer>
