add portrait, personal info

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 </head>
 <body>
   <header>
-    <img src="your-portrait.jpg" alt="Your Name" class="portrait" />
-    <h1>Your Name</h1>
+    <img src="your-portrait.jpg" alt="Paul Moore" class="portrait" />
+    <h1>Paul Moore</h1>
     <nav class="links">
-      <a href="mailto:your.email@example.com" aria-label="Email">
+      <a href="mailto:pmoore44@uwo.ca" aria-label="Email">
         <i class="fas fa-envelope"></i>
       </a>
-      <a href="https://github.com/your-github" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+      <a href="https://github.com/DNAPrototypeX" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
     </nav>
