--- a/index.html
+++ b/index.html
@@ -7,43 +7,9 @@
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-p1CmD56MDEQfn4poCd9N6T0LqJP7qG7PLj6l47gTWZqN3JzN6f6NY19qUeCKsTBT6k3BRcS7lSvltVrVdEYjPA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
   />
-  <style>
-    header {
-      display: flex;
-      align-items: center;
-      padding: 1rem 2rem;
-      background-color: #f8f8f8;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      gap: 1.5rem;
-    }
-    .portrait {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid #333;
-    }
-    h1 {
-      flex-grow: 1;
-      font-size: 1.5rem;
-      margin: 0;
-      color: #333;
-    }
-    .links a {
-      margin-left: 1rem;
-      color: #333;
-      font-size: 1.3rem;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-    .links a:hover {
-      color: #0077b5; /* a nice blue for hover */
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
+
 </head>
 <body>
   <header>
@@ -75,11 +41,6 @@
       <h3>Generative Models for Protein-Protein Interaction Prediction</h3>
       <p>A review paper intended to bring informed non-experts up to speed on the current developments in PPI prediction using deep learning.</p>
     </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:pmoore44@uwo.ca">pmoore44@uwo.ca</a></p>
   </section>
 
   <footer>
