Update portrait, change page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title> 
+  <title>About Paul Moore</title> 
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <img src="your-portrait.jpg" alt="Paul Moore" class="portrait" />
+    <img src="my-portrait.jpg" alt="Paul Moore" class="portrait" />
     <h1>Paul Moore</h1>
     <nav class="links">
     <a href="#" id="darkModeToggle" aria-label="Toggle Dark Mode" style="margin-right:10px; class="toggle-link">
