Update about me section

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
   <section id="about">
     <h2>About Me</h2>
     <p>Hi! I am currently studying for my masters degree in computer science at Western, under the co-supervision of <a href="https://agustinus.kristia.de/">Dr. Augustinus Kistiadi</a> and <a href="https://www.csd.uwo.ca/~ilie/">Dr. Lucian Ilie</a>. 
-    My areas of interest are Deep Learning algorithms and their applications in Bioinformatics.
-
-    </p>
+    My areas of interest are Deep Learning algorithms and their applications in Bioinformatics.</p>
+    <p>Outside of academia I spend my time throwing shotput and hammer, building and riding motorcycles, and back-country camping.</p>
   </section>
 
   <section id="projects">
