Organize directory structure, make my first real blog post

--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
 
   <section id="blog">
     <h2>Blog Posts</h2>
-    <section class="news-item" onclick="window.location.href='blog/blog1.html'">
-      <h3>My First Blog Post</h3>
+
+    <section class=" news-item" onclick="window.location.href='blog/1/post.html'">
+      <h3>Thinkpad T430s USB-C Charging Mod</h3>
+      <p>A write up on how I modified my Thinkpad T430s to charge via a USB-C port! (originally posted to Reddit)</p>
+      <div class=" date">October 25, 2025</div>
+    </section>
+
+    <section class=" news-item" onclick="window.location.href='blog/0/template.html'">
+      <h3>My Blog Post Template</h3>
       <p>My Blog post template</p>
       <div class="date">October 24, 2025</div>
     </section>
