Add xs400 post to index.html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
   <section id="blog">
     <h2>Blog Posts</h2>
 
+    <section class=" news-item" onclick="window.location.href='blog/2/post.html'">
+      <h3>1981 Yamaha XS400 Special II Build (Ongoing)</h3>
+      <p>A write up on my progress to date on my XS400 motorcycle project.</p>
+      <div class=" date">October 27, 2025</div>
+    </section>
+
     <section class=" news-item" onclick="window.location.href='blog/1/post.html'">
       <h3>Thinkpad T430s USB-C Charging Mod</h3>
       <p>A write up on how I modified my Thinkpad T430s to charge via a USB-C port! (originally posted to Reddit)</p>
