Update XS400 Blog Post

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             d="M0 4a2 2 0 012-2h12a2 2 0 012 2v8a2 2 0 01-2 2H2a2 2 0 01-2-2V4zm2-.5v.217l6 3.6 6-3.6V3.5H2zm6.761 4.85L2.481 13h11.038l-6.758-3.65z" />
         </svg>
       </a>
+
+      <a href="https://www.linkedin.com/in/paul-moore-941091397/" aria-label="LinkedIn" style="margin-right:10px;"
+        target="_blank" rel="noopener noreferrer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+          <path
+            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.358.54-1.358 1.248 0 .694.521 1.248 1.327 1.248h.015zm4.908 8.212V9.359c0-.215.016-.43.08-.584.173-.43.568-.877 1.232-.877.869 0 1.216.662 1.216 1.633v3.863h2.4V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193h.015V6.169h-2.4c.03.662 0 7.225 0 7.225h2.4z" />
+        </svg>
+      </a>
       <a href="https://github.com/DNAPrototypeX" target="_blank" aria-label="GitHub">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
           <path
@@ -54,27 +62,9 @@
 
   <section id="blog">
     <h2>Blog Posts</h2>
-
-    <section class=" news-item" onclick="window.location.href='blog/2/post.html'">
-      <h3>1981 Yamaha XS400 Special II Build (Ongoing)</h3>
-      <p>A write up on my progress to date on my XS400 motorcycle project.</p>
-      <div class=" date">October 27, 2025</div>
-    </section>
-
-    <section class=" news-item" onclick="window.location.href='blog/1/post.html'">
-      <h3>Thinkpad T430s USB-C Charging Mod</h3>
-      <p>A write up on how I modified my Thinkpad T430s to charge via a USB-C port! (originally posted to Reddit)</p>
-      <div class=" date">October 25, 2025</div>
-    </section>
-
-    <section class=" news-item" onclick="window.location.href='blog/0/template.html'">
-      <h3>My Blog Post Template</h3>
-      <p>My Blog post template</p>
-      <div class="date">October 24, 2025</div>
-    </section>
   </section>
 
-  <script src="darkmode-toggle.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
